[package]
name = "solana-rpc-minimal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
# pinned last good version is 1.14.1
#tokio = { version = "1.14.1", features = ["full"] }
tokio = { version = "1.23.0", features = ["full"] }
hyper = "0.14.20"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
nix = "0.25.0"
socket2 = "0.4.4"
crossbeam-channel = "0.5.6"
url = "2.2.2"
